/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    // https://mvnrepository.com/artifact/org.apache.flink/flink-streaming-java
    compileOnly group: 'org.apache.flink', name: 'flink-streaming-java', version: '1.20.0'

    // https://mvnrepository.com/artifact/org.apache.flink/flink-java
    implementation group: 'org.apache.flink', name: 'flink-java', version: '1.20.0'

    // https://mvnrepository.com/artifact/org.apache.flink/flink-clients
    implementation group: 'org.apache.flink', name: 'flink-clients', version: '1.20.0'

    // https://mvnrepository.com/artifact/org.apache.flink/flink-connector-kafka
    implementation group: 'org.apache.flink', name: 'flink-connector-kafka', version: '3.3.0-1.20'

    // https://mvnrepository.com/artifact/org.apache.flink/flink-connector-base
    implementation group: 'org.apache.flink', name: 'flink-connector-base', version: '1.20.0'

    // https://mvnrepository.com/artifact/com.esotericsoftware.kryo/kryo
    implementation group: 'com.esotericsoftware.kryo', name: 'kryo', version: '2.24.0'

}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'word.pronunciation.App'
}

tasks.named('run') {
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
}